--- a/numpy_exercises.ipynb
+++ b/numpy_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3bfe066a",
+   "id": "db8e2e30",
    "metadata": {},
    "source": [
     "# numpy_exercises\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63c86ff5",
+   "id": "e266fca3",
    "metadata": {},
    "source": [
     "### a = np.array([4, 10, 12, 23, -2, -1, 0, 0, 0, -6, 3, -7])"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9f10a9a",
+   "id": "7c2e9042",
    "metadata": {},
    "source": [
     "### 1. How many negative numbers are there?"
@@ -27,8 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "b1365d13",
+   "execution_count": 1,
+   "id": "d6028a10",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ea193f7",
+   "id": "5f6d363c",
    "metadata": {},
    "source": [
     "### 2. How many positive numbers are there?"
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "012925c3",
+   "execution_count": 2,
+   "id": "fd40564b",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4602bd03",
+   "id": "ef496319",
    "metadata": {},
    "source": [
     "### 3. How many even positive numbers are there?"
@@ -99,8 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "2ad9eac1",
+   "execution_count": 3,
+   "id": "5afbd7a1",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a37e413",
+   "id": "65e9f842",
    "metadata": {},
    "source": [
     "### 4. If you were to add 3 to each data point, how many positive numbers would there be?"
@@ -133,8 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "8dfb43e1",
+   "execution_count": 4,
+   "id": "a9ec89cb",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d801bd1b",
+   "id": "b3ca5810",
    "metadata": {},
    "source": [
     "### 5. If you squared each number, what would the new mean and standard deviation be?"
@@ -163,8 +163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "7603e849",
+   "execution_count": 5,
+   "id": "09ae0474",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc5d5993",
+   "id": "4fb24f29",
    "metadata": {},
    "source": [
     "### 6. A common statistical operation on a dataset is centering. This means to adjust the data such that the mean of the data is 0. This is done by subtracting the mean from each data point. Center the data set. See this link for more on centering."
@@ -200,8 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "51f229ad",
+   "execution_count": 6,
+   "id": "cba0d50f",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0bf3c21",
+   "id": "f152ff43",
    "metadata": {},
    "source": [
     "### 7. Calculate the z-score for each data point. Recall that the z-score is given by:\n",
@@ -237,8 +237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "bb2ce234",
+   "execution_count": 7,
+   "id": "e274b55e",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d09424d",
+   "id": "0660230e",
    "metadata": {},
    "source": [
     "### 8. Copy the setup and exercise directions from More Numpy Practice into your numpy_exercises.py and add your solutions.\n",
@@ -268,8 +268,250 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "67ad0c32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19a58146",
+   "metadata": {},
+   "source": [
+    "### Exercise 1 - Make a variable called sum_of_a to hold the sum of all the numbers in above list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6f6810e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_of_a = sum(a)\n",
+    "print(sum_of_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daf2e22c",
+   "metadata": {},
+   "source": [
+    "### Exercise 2 - Make a variable named min_of_a to hold the minimum of all the numbers in the above list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6e6d3692",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_of_a = min(a)\n",
+    "print(min_of_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fbb2d90",
+   "metadata": {},
+   "source": [
+    "### Exercise 3 - Make a variable named max_of_a to hold the max number of all the numbers in the above list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d276eb66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_of_a = max(a)\n",
+    "print(max(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbe0d85c",
+   "metadata": {},
+   "source": [
+    "### Exercise 4 - Make a variable named mean_of_a to hold the average of all the numbers in the above list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d4c16956",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_of_a = a.mean()\n",
+    "print(mean_of_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fda58d4",
+   "metadata": {},
+   "source": [
+    "### Exercise 5 - Make a variable named product_of_a to hold the product of multiplying all the numbers in the above list together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a4148d61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0000e+00 2.0000e+00 6.0000e+00 2.4000e+01 1.2000e+02 7.2000e+02\n",
+      " 5.0400e+03 4.0320e+04 3.6288e+05 3.6288e+06]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.special\n",
+    "\n",
+    "product_of_a = scipy.special.factorial(a)\n",
+    "print(product_of_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fee45692",
+   "metadata": {},
+   "source": [
+    "### Exercise 6 - Make a variable named squares_of_a. It should hold each number in a squared like [1, 4, 9, 16, 25...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "bad02b6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1   4   9  16  25  36  49  64  81 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "squares_of_a = a**2\n",
+    "print(squares_of_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8ccbc77",
+   "metadata": {},
+   "source": [
+    "### Exercise 7 - Make a variable named odds_in_a. It should hold only the odd numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "c04f3c41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5 7 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "odds_in_a = a[a % 2 != 0]\n",
+    "print(odds_in_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fe03d8c",
+   "metadata": {},
+   "source": [
+    "### Exercise 8 - Make a variable named evens_in_a. It should hold only the evens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "7a503520",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  4  6  8 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "evens_in_a = a[a % 2 == 0]\n",
+    "print(evens_in_a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96e97905",
+   "metadata": {},
+   "source": [
+    "### What about life in two dimensions? A list of lists is matrix, a table, a spreadsheet, a chessboard...\n",
+    "### Setup 2: Consider what it would take to find the sum, min, max, average, sum, product, and list of squares for this list of two lists.\n",
+    "### b = \n",
+    "    [\n",
+    "    [3, 4, 5],\n",
+    "    [6, 7, 8]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3e3acb1c",
+   "id": "d6af6634",
    "metadata": {},
    "outputs": [],
    "source": []
