--- a/pandas_series_exercises.ipynb
+++ b/pandas_series_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3d6e90ed",
+   "id": "de6851a9",
    "metadata": {},
    "source": [
     "# Exercises Part I"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f4f2694d",
+   "id": "0771fbd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "247c5d66",
+   "id": "f30665f2",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e96f9a4",
+   "id": "accfbd7d",
    "metadata": {},
    "source": [
     "# Exercises Part II"
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "116f75c0",
+   "id": "96969e39",
    "metadata": {},
    "source": [
     "1. Capitalize all the string values in fruits."
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "84b0b977",
+   "id": "cbec04e8",
    "metadata": {
     "scrolled": true
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a999a6a",
+   "id": "cf99011d",
    "metadata": {},
    "source": [
     "2. Count the letter \"a\" in all the string values (use string vectorization)."
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fd3d989c",
+   "id": "0f5d0ddd",
    "metadata": {
     "scrolled": true
    },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d18465fb",
+   "id": "09ec4b71",
    "metadata": {},
    "source": [
     "3. Output the number of vowels in each and every string value."
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "dfe47328",
+   "id": "a777f58f",
    "metadata": {
     "scrolled": true
    },
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eeede56",
+   "id": "a6e9510f",
    "metadata": {},
    "source": [
     "4. Write the code to get the longest string value from fruits."
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "ec963137",
+   "id": "5723cddc",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25435fd6",
+   "id": "8448bb5a",
    "metadata": {},
    "source": [
     "5. Write the code to get the string values with 5 or more letters in the name."
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "4ace999c",
+   "id": "1d9e0665",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0556b56d",
+   "id": "71f51853",
    "metadata": {},
    "source": [
     "6. Use the .apply method with a lambda function to find the fruit(s) containing the letter \"o\" two or more times."
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "bf041a29",
+   "id": "80e8756f",
    "metadata": {
     "scrolled": true
    },
@@ -330,13 +330,120 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ed10aab",
+   "id": "1851fb76",
    "metadata": {},
-   "source": []
+   "source": [
+    "7. Write the code to get only the string values containing the substring \"berry\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "e239565d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2     strawberry\n",
+       "13     blueberry\n",
+       "14    blackberry\n",
+       "15    gooseberry\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits[fruits.str.endswith('berry')]"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "10537746",
+   "id": "de1beef8",
+   "metadata": {},
+   "source": [
+    "8. Write the code to get only the string values containing the substring \"apple\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "fc521c6f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3           pineapple\n",
+       "4          gala apple\n",
+       "5    honeycrisp apple\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits[fruits.str.contains('apple')]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ce367b0",
+   "metadata": {},
+   "source": [
+    "9. Which string value contains the most vowels?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "8be43bb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     False\n",
+       "1      True\n",
+       "2      True\n",
+       "3      True\n",
+       "4      True\n",
+       "5      True\n",
+       "6      True\n",
+       "7      True\n",
+       "8     False\n",
+       "9     False\n",
+       "10    False\n",
+       "11    False\n",
+       "12     True\n",
+       "13    False\n",
+       "14     True\n",
+       "15    False\n",
+       "16     True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits.str.contains('a', 'e')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96706aba",
    "metadata": {},
    "source": [
     "# Exercises Part III"
@@ -345,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ebb80d1",
+   "id": "254e8516",
    "metadata": {},
    "outputs": [],
    "source": []
