--- a/numpy_exercises.ipynb
+++ b/numpy_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db8e2e30",
+   "id": "68d86823",
    "metadata": {},
    "source": [
     "# numpy_exercises\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e266fca3",
+   "id": "52723233",
    "metadata": {},
    "source": [
     "### a = np.array([4, 10, 12, 23, -2, -1, 0, 0, 0, -6, 3, -7])"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c2e9042",
+   "id": "b4f84e64",
    "metadata": {},
    "source": [
     "### 1. How many negative numbers are there?"
@@ -27,8 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d6028a10",
+   "execution_count": 44,
+   "id": "fbb437f3",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f6d363c",
+   "id": "e3ea23c6",
    "metadata": {},
    "source": [
     "### 2. How many positive numbers are there?"
@@ -65,9 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "fd40564b",
-   "metadata": {},
+   "execution_count": 45,
+   "id": "76be2e48",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef496319",
+   "id": "f39eb9d5",
    "metadata": {},
    "source": [
     "### 3. How many even positive numbers are there?"
@@ -99,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5afbd7a1",
+   "execution_count": 46,
+   "id": "f038552d",
    "metadata": {},
    "outputs": [
     {
@@ -125,37 +127,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65e9f842",
+   "id": "65327606",
    "metadata": {},
    "source": [
-    "### 4. If you were to add 3 to each data point, how many positive numbers would there be?"
+    "### 4. If you were to add 3 to each data point, how many positive numbers would there be?\n",
+    "- why do you get 6 on the end? 0 + 3 != 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a9ec89cb",
-   "metadata": {},
+   "execution_count": 51,
+   "id": "7b07b1a8",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " This is what you get when you add 3 to a:[ 4 10 12 23 -2 -1  0  0  0 -6  3 -7]\n",
-      " ---------------------------------> add 3:[ 7 13 15 26  1  2  3  3  3 -3  6 -4]\n"
+      " These are all of the positive values you get when you add 3 to a:[ 4 10 12 23 -2 -1  0  0  0 -6  3 -7]\n",
+      " ---------------------------------------------------------> add 3:[ 7 13 15 26  1  2  3  3  3  6]\n"
      ]
     }
    ],
    "source": [
     "#assigned add_3 to the array that adds 3 to each number in a\n",
     "add_3 = a + 3\n",
-    "print(f' This is what you get when you add 3 to a:{a}')\n",
-    "print(f' ---------------------------------> add 3:{add_3}')"
+    "print(f' These are all of the positive values you get when you add 3 to a:{a}')\n",
+    "print(f' ---------------------------------------------------------> add 3:{add_3[add_3 > 0]}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b3ca5810",
+   "id": "c96aa4c1",
    "metadata": {},
    "source": [
     "### 5. If you squared each number, what would the new mean and standard deviation be?"
@@ -164,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "09ae0474",
+   "id": "75ecf11a",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb24f29",
+   "id": "15c3f18c",
    "metadata": {},
    "source": [
     "### 6. A common statistical operation on a dataset is centering. This means to adjust the data such that the mean of the data is 0. This is done by subtracting the mean from each data point. Center the data set. See this link for more on centering."
@@ -201,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cba0d50f",
+   "id": "9dbfc521",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f152ff43",
+   "id": "66a668a7",
    "metadata": {},
    "source": [
     "### 7. Calculate the z-score for each data point. Recall that the z-score is given by:\n",
@@ -238,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e274b55e",
+   "id": "c2bd7508",
    "metadata": {},
    "outputs": [
     {
@@ -252,14 +257,14 @@
    ],
    "source": [
     "#divided a_center (already subtracted mean of a from a value) by std dev of a to get the z score\n",
-    "a_zscore = a_center / a.std()\n",
+    "a_zscores = a_center / a.std()\n",
     "\n",
     "print(f'The z-score for each data point in a is:{a_zscore}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0660230e",
+   "id": "f8828c0d",
    "metadata": {},
    "source": [
     "### 8. Copy the setup and exercise directions from More Numpy Practice into your numpy_exercises.py and add your solutions.\n",
@@ -269,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "67ad0c32",
+   "id": "4e28b33a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19a58146",
+   "id": "13c265d7",
    "metadata": {},
    "source": [
     "### Exercise 1 - Make a variable called sum_of_a to hold the sum of all the numbers in above list"
@@ -287,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6f6810e4",
+   "id": "a7f58159",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daf2e22c",
+   "id": "759a831b",
    "metadata": {},
    "source": [
     "### Exercise 2 - Make a variable named min_of_a to hold the minimum of all the numbers in the above list"
@@ -314,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6e6d3692",
+   "id": "ede45d39",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fbb2d90",
+   "id": "5b162f24",
    "metadata": {},
    "source": [
     "### Exercise 3 - Make a variable named max_of_a to hold the max number of all the numbers in the above list"
@@ -341,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d276eb66",
+   "id": "c5d4a451",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbe0d85c",
+   "id": "b51466ae",
    "metadata": {},
    "source": [
     "### Exercise 4 - Make a variable named mean_of_a to hold the average of all the numbers in the above list"
@@ -368,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d4c16956",
+   "id": "d07f716c",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fda58d4",
+   "id": "2b3ebad7",
    "metadata": {},
    "source": [
     "### Exercise 5 - Make a variable named product_of_a to hold the product of multiplying all the numbers in the above list together"
@@ -395,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a4148d61",
+   "id": "a3a04f6a",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fee45692",
+   "id": "85d27da5",
    "metadata": {},
    "source": [
     "### Exercise 6 - Make a variable named squares_of_a. It should hold each number in a squared like [1, 4, 9, 16, 25...]"
@@ -425,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "bad02b6e",
+   "id": "fe9d4f5b",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8ccbc77",
+   "id": "ca8269d2",
    "metadata": {},
    "source": [
     "### Exercise 7 - Make a variable named odds_in_a. It should hold only the odd numbers"
@@ -452,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c04f3c41",
+   "id": "ca8cfa0e",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fe03d8c",
+   "id": "94f3fc88",
    "metadata": {},
    "source": [
     "### Exercise 8 - Make a variable named evens_in_a. It should hold only the evens"
@@ -479,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7a503520",
+   "id": "7c4f50d4",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96e97905",
+   "id": "dc9f9eaa",
    "metadata": {},
    "source": [
     "### What about life in two dimensions? A list of lists is matrix, a table, a spreadsheet, a chessboard...\n",
@@ -511,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6af6634",
+   "id": "16e8a52e",
    "metadata": {},
    "outputs": [],
    "source": []
