--- a/pydataset_exercises.ipynb
+++ b/pydataset_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0f57bd2d",
+   "id": "3e5a8781",
    "metadata": {},
    "source": [
     "# pydataset_exercises"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e63835f6",
+   "id": "8978bffe",
    "metadata": {},
    "source": [
     "1. Copy the code from the lesson to create a dataframe full of student grades."
@@ -18,38 +18,399 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "66f1b64b",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 26,
+   "id": "0d85768e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>math</th>\n",
+       "      <th>english</th>\n",
+       "      <th>reading</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sally</td>\n",
+       "      <td>77</td>\n",
+       "      <td>78</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>66</td>\n",
+       "      <td>73</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Suzie</td>\n",
+       "      <td>93</td>\n",
+       "      <td>65</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Billy</td>\n",
+       "      <td>84</td>\n",
+       "      <td>96</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ada</td>\n",
+       "      <td>61</td>\n",
+       "      <td>65</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>John</td>\n",
+       "      <td>91</td>\n",
+       "      <td>98</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Thomas</td>\n",
+       "      <td>82</td>\n",
+       "      <td>75</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Marie</td>\n",
+       "      <td>72</td>\n",
+       "      <td>75</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Albert</td>\n",
+       "      <td>72</td>\n",
+       "      <td>87</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Richard</td>\n",
+       "      <td>84</td>\n",
+       "      <td>98</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Isaac</td>\n",
+       "      <td>70</td>\n",
+       "      <td>77</td>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Alan</td>\n",
+       "      <td>60</td>\n",
+       "      <td>91</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name  math  english  reading\n",
+       "0     Sally    77       78       62\n",
+       "1      Jane    66       73       96\n",
+       "2     Suzie    93       65       97\n",
+       "3     Billy    84       96       85\n",
+       "4       Ada    61       65       60\n",
+       "5      John    91       98       63\n",
+       "6    Thomas    82       75       74\n",
+       "7     Marie    72       75       66\n",
+       "8    Albert    72       87       95\n",
+       "9   Richard    84       98       63\n",
+       "10    Isaac    70       77       86\n",
+       "11     Alan    60       91       92"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#1a. Create a column named passing_english that indicates whether each student has a passing grade in english."
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# students = ['Sally', 'Jane', 'Suzie', 'Billy', 'Ada', 'John', 'Thomas',\n",
+    "#             'Marie', 'Albert', 'Richard', 'Isaac', 'Alan']\n",
+    "\n",
+    "# math_grades = np.random.randint(low=60, high=100, size=len(students))\n",
+    "# english_grades = np.random.randint(low=60, high=100, size=len(students))\n",
+    "# reading_grades = np.random.randint(low=60, high=100, size=len(students))\n",
+    "\n",
+    "# student_grades = pd.DataFrame({'name': students,\n",
+    "#                    'math': math_grades,\n",
+    "#                    'english': english_grades,\n",
+    "#                    'reading': reading_grades}) \n",
+    "\n",
+    "student_grades\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d314bab5",
+   "execution_count": 35,
+   "id": "087cef85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>math</th>\n",
+       "      <th>english</th>\n",
+       "      <th>reading</th>\n",
+       "      <th>pass_english</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sally</td>\n",
+       "      <td>77</td>\n",
+       "      <td>78</td>\n",
+       "      <td>62</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>66</td>\n",
+       "      <td>73</td>\n",
+       "      <td>96</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Suzie</td>\n",
+       "      <td>93</td>\n",
+       "      <td>65</td>\n",
+       "      <td>97</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Billy</td>\n",
+       "      <td>84</td>\n",
+       "      <td>96</td>\n",
+       "      <td>85</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ada</td>\n",
+       "      <td>61</td>\n",
+       "      <td>65</td>\n",
+       "      <td>60</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>John</td>\n",
+       "      <td>91</td>\n",
+       "      <td>98</td>\n",
+       "      <td>63</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Thomas</td>\n",
+       "      <td>82</td>\n",
+       "      <td>75</td>\n",
+       "      <td>74</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Marie</td>\n",
+       "      <td>72</td>\n",
+       "      <td>75</td>\n",
+       "      <td>66</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Albert</td>\n",
+       "      <td>72</td>\n",
+       "      <td>87</td>\n",
+       "      <td>95</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Richard</td>\n",
+       "      <td>84</td>\n",
+       "      <td>98</td>\n",
+       "      <td>63</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Isaac</td>\n",
+       "      <td>70</td>\n",
+       "      <td>77</td>\n",
+       "      <td>86</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Alan</td>\n",
+       "      <td>60</td>\n",
+       "      <td>91</td>\n",
+       "      <td>92</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name  math  english  reading  pass_english\n",
+       "0     Sally    77       78       62          True\n",
+       "1      Jane    66       73       96          True\n",
+       "2     Suzie    93       65       97          True\n",
+       "3     Billy    84       96       85          True\n",
+       "4       Ada    61       65       60          True\n",
+       "5      John    91       98       63          True\n",
+       "6    Thomas    82       75       74          True\n",
+       "7     Marie    72       75       66          True\n",
+       "8    Albert    72       87       95          True\n",
+       "9   Richard    84       98       63          True\n",
+       "10    Isaac    70       77       86          True\n",
+       "11     Alan    60       91       92          True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#1b. Sort the english grades by the passing_english column. How are duplicates handled?"
+    "#1a. Create a column named passing_english that indicates whether each student has a passing grade in english.\n",
+    "\n",
+    "pass_english = student_grades.english > 59\n",
+    "student_grades['pass_english'] = pass_english\n",
+    "\n",
+    "student_grades"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "74f4b8a3",
+   "execution_count": 50,
+   "id": "d23444bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     True\n",
+       "1     True\n",
+       "2     True\n",
+       "3     True\n",
+       "4     True\n",
+       "5     True\n",
+       "6     True\n",
+       "7     True\n",
+       "8     True\n",
+       "9     True\n",
+       "10    True\n",
+       "11    True\n",
+       "Name: pass_english, dtype: bool"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#1c. Sort the english grades first by passing_english and then by student name. All the students that are failing english should be first, and within the students that are failing english they should be ordered alphabetically. The same should be true for the students passing english. (Hint: you can pass a list to the .sort_values method)"
+    "#1b. Sort the english grades by the passing_english column. How are duplicates handled?\n",
+    "\n",
+    "student_grades['pass_english']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "669d2723",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "0     True\n1     True\n2     True\n3     True\n4     True\n5     True\n6     True\n7     True\n8     True\n9     True\n10    True\n11    True\nName: english, dtype: bool",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-49-e074febf4b9d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#1c. Sort the english grades first by passing_english and then by student name. All the students that are failing english should be first, and within the students that are failing english they should be ordered alphabetically. The same should be true for the students passing english. (Hint: you can pass a list to the .sort_values method)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mstudent_grades\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpass_english\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36msort_values\u001b[0;34m(self, by, axis, ascending, inplace, kind, na_position, ignore_index, key)\u001b[0m\n\u001b[1;32m   5453\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5454\u001b[0m             \u001b[0mby\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mby\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5455\u001b[0;31m             \u001b[0mk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_label_or_level_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5456\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5457\u001b[0m             \u001b[0;31m# need to rewrap column in Series to apply key function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/anaconda3/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m_get_label_or_level_values\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1682\u001b[0m             \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_level_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1683\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1684\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1685\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1686\u001b[0m         \u001b[0;31m# Check for duplicates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 0     True\n1     True\n2     True\n3     True\n4     True\n5     True\n6     True\n7     True\n8     True\n9     True\n10    True\n11    True\nName: english, dtype: bool"
+     ]
+    }
+   ],
+   "source": [
+    "#1c. Sort the english grades first by passing_english and then by student name. All the students that are failing english should be first, and within the students that are failing english they should be ordered alphabetically. The same should be true for the students passing english. (Hint: you can pass a list to the .sort_values method)\n",
+    "\n",
+    "student_grades.sort_values('name').sort_values(pass_english)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b9689721",
+   "id": "c97d7fc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "da06e946",
+   "id": "1c0b8b52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4c1e7ee",
+   "id": "b637bbc9",
    "metadata": {},
    "source": [
     "2. Load the mpg dataset. Read the documentation for the dataset and use it for the following questions:"
@@ -77,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "376899bb",
+   "id": "9c3e70cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0dee5a0",
+   "id": "a427a570",
    "metadata": {},
    "source": [
     "3. Load the Mammals dataset. Read the documentation for it, and use the data to answer these questions:"
@@ -115,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "46337f2a",
+   "id": "696c0e9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "440b1919",
+   "id": "6070981a",
    "metadata": {},
    "outputs": [],
    "source": []
